# rclt

./: LICENSE  README.md  pyproject.toml
api/inferencehost/: README.md  reboot_host.py  start_host.py  status_host.py  stop_host.py  terminate_host.py
api/showcase/: 1_showcase_inference.py  2_showcase_gleu_evaluation.py  README.md
api/trainingsession/: 6_train.py  7_inference.py  8_gleu_evaluation.py  README.md
data_preparation/: 1_split.py  2_cleanse.py  3_combine.py  4_deduplicate.py  5_reverse.py  README.md
example_data/bitext/: README.md
example_data/tatoeba/: README.md
example_data/tatoeba/danish/test_data/: Danish_English_Test.txt  English_Danish_Test.txt
example_data/tatoeba/danish/unmodified/: Sentence pairs in Danish-English.tsv
